# processor-post-timeseries

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: tests.yml
processor/: annotation_extractor.py  config.py  constants.py  importer.py  main.py  reader.py  timeseries.py  timeseries_channel.py  utils.py  writer.py
processor/clients/: __init__.py  authentication_client.py  base_client.py  import_client.py  packages_client.py  timeseries_client.py  workflow_client.py
scripts/: generate_test_nwb.py
tests/: conftest.py  test_authentication_client.py  test_base_client.py  test_config.py  test_import_client.py  test_importer.py  test_packages_client.py  test_reader.py  test_timeseries_channel.py  test_timeseries_client.py  test_utils.py  test_workflow_client.py  test_writer.py
